2008-07-31  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-button-example.c: Updated example.

2008-07-30  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-docs.sgml:
	* doc/hildon.types:

	Update documentation.

	* examples/Makefile.am: Update renamed examples.

	* examples/hildon-picker-button-multicolumn-example.c:
	(create_touch_selector), (main): Update after the rename.

	* examples/hildon-touch-picker-example.c: Removed.
	* examples/hildon-touch-selector-example.c: (value_changed),
	(create_selector), (get_visible_content), (main): Renamed from
	hildon-touch-picker-example.c

	* src/Makefile.am: Updated renamed files.

	* src/hildon-date-button.c: (hildon_date_button_init),
	(hildon_date_button_get_date), (hildon_date_button_set_date):
	* src/hildon-date-selector.c: (hildon_date_selector_init),
	(_custom_print_func), (_update_day_model),
	(_manage_selector_change_cb),
	(hildon_date_selector_select_current_date),
	(hildon_date_selector_get_date), (hildon_date_selector_select_day):
	* src/hildon-date-selector.h:
	* src/hildon-picker-button.c: (hildon_picker_button_get_property),
	(hildon_picker_button_set_property),
	(hildon_picker_button_clicked), (hildon_picker_button_class_init),
	(hildon_picker_button_init), (hildon_picker_button_new_text),
	(hildon_picker_button_append_text),
	(hildon_picker_button_prepend_text),
	(hildon_picker_button_insert_text),
	(hildon_picker_button_set_selector),
	(hildon_picker_button_get_selector):
	* src/hildon-picker-button.h:
	* src/hildon-picker-dialog.c: (hildon_picker_dialog_class_init),
	(hildon_picker_dialog_init), (_select_on_selector_changed_cb),
	(_update_title_on_selector_changed_cb), (requires_done_button),
	(_hildon_picker_dialog_set_selector),
	(hildon_picker_dialog_set_selector),
	(hildon_picker_dialog_get_selector):
	* src/hildon-picker-dialog.h:
	* src/hildon-time-button.c: (hildon_time_button_init),
	(hildon_time_button_get_time), (hildon_time_button_set_time):